Fix bug in project.clj.

--- a/play-core.async/Dockerfile
+++ b/play-core.async/Dockerfile
@@ -1,6 +1,7 @@
 FROM clojure:lein
 RUN mkdir -p /usr/src/app
-COPY project.clj /usr/src/app
+WORKDIR /usr/src/app
+COPY project.clj .
 RUN lein deps
-COPY . /usr/src/app
+COPY . .
 CMD ["lein","repl"]
